--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
             <version>3.8.0</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.moandjiezana.toml</groupId>
+            <artifactId>toml4j</artifactId>
+            <version>0.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jasync-sql</groupId>
+            <artifactId>jasync-mysql</artifactId>
+            <version>2.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
